--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "dpluralize",
-  "version": "1.0.0",
-  "description": "simplest pluralizer",
-  "main": "index.js",
-  "repository": "https://github.com/devoutprogrammer/packages-dpluralize.git",
-  "author": "The Devout Programmer <github@devoutprogrammer.com>",
-  "license": "MIT",
-  "private": false
+    "name": "dpluralize",
+    "version": "1.0.0",
+    "description": "simplest pluralizer",
+    "main": "index.js",
+    "repository": "https://github.com/devoutprogrammer/packages-dpluralize.git",
+    "bugs": "https://github.com/devoutprogrammer/packages-dpluralize/issues",
+    "author": "The Devout Programmer <github@devoutprogrammer.com>",
+    "keywords": [
+        "pluralize",
+        "dpluralize",
+        "pluralizer",
+        "simple pluralizer",
+        "simplest pluralizer"
+    ],
+    "license": "MIT",
+    "private": false
 }
